--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-      "dev": "next dev -p 5000 --turbopack",
+    "dev": "next dev -p 5000 --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.539.0",
     "next": "^15.2.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
@@ -22,7 +23,10 @@
     "@types/react-dom": "19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
